[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example"
version = "0.0.1"
authors = [
  { name="labase", email="github@labase.dev" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/labasef/python-sandbox/tree/main/package_example"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"